; ModuleID = '/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_list.c__thr_hash_add.c'
source_filename = "/home/carl/AnghaBench/freebsd/lib/libthr/thread/extr_thr_list.c__thr_hash_add.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread_hash_head = type { i32 }
%struct.pthread = type { i32 }

@thr_hashtable = common dso_local global %struct.thread_hash_head* null, align 8
@hle = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @_thr_hash_add(%struct.pthread* %0) #0 {
  %2 = alloca %struct.pthread*, align 8
  %3 = alloca %struct.thread_hash_head*, align 8
  store %struct.pthread* %0, %struct.pthread** %2, align 8
  %4 = load %struct.thread_hash_head*, %struct.thread_hash_head** @thr_hashtable, align 8
  %5 = load %struct.pthread*, %struct.pthread** %2, align 8
  %6 = call i64 @THREAD_HASH(%struct.pthread* %5)
  %7 = getelementptr inbounds %struct.thread_hash_head, %struct.thread_hash_head* %4, i64 %6
  store %struct.thread_hash_head* %7, %struct.thread_hash_head** %3, align 8
  %8 = load %struct.thread_hash_head*, %struct.thread_hash_head** %3, align 8
  %9 = load %struct.pthread*, %struct.pthread** %2, align 8
  %10 = load i32, i32* @hle, align 4
  %11 = call i32 @LIST_INSERT_HEAD(%struct.thread_hash_head* %8, %struct.pthread* %9, i32 %10)
  ret void
}

declare dso_local i64 @THREAD_HASH(%struct.pthread*) #1

declare dso_local i32 @LIST_INSERT_HEAD(%struct.thread_hash_head*, %struct.pthread*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
